Fixed maven profiles WRT JPA tests. Made openjpa2 the default profile.