@@ -146,15 +146,183 @@
     -->
 
     <profiles>
+
+        <profile>
+            <id>eclipselink2</id>
+            <activation>
+                <property>
+                    <name>jpaSpec</name>
+                    <value>eclipselink2</value>
+                </property>
+            </activation>
+
+            <properties>
+                <jpa.provider.class>org.eclipse.persistence.jpa.PersistenceProvider</jpa.provider.class>
+            </properties>
+
+            <dependencyManagement>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.eclipse.persistence</groupId>
+                        <artifactId>javax.persistence</artifactId>
+                        <version>2.1.0</version>
+                        <scope>provided</scope>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.eclipse.persistence</groupId>
+                        <artifactId>eclipselink</artifactId>
+                        <version>2.5.0</version>
+                        <scope>provided</scope>
+                    </dependency>
+                </dependencies>
+            </dependencyManagement>
+            <dependencies>
+                <dependency>
+                    <groupId>org.eclipse.persistence</groupId>
+                    <artifactId>javax.persistence</artifactId>
+                    <scope>provided</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.eclipse.persistence</groupId>
+                    <artifactId>eclipselink</artifactId>
+                    <scope>provided</scope>
+                </dependency>
+            </dependencies>
+        </profile>
+
+        <profile>
+            <id>openjpa1</id>
+            <activation>
+                <property>
+                    <name>jpaSpec</name>
+                    <value>openjpa1</value>
+                </property>
+            </activation>
+
+            <properties>
+                <!--
+                    Ensure that the required properties for using OpenJPA as the persistence provider exists.
+                -->
+                <openjpa.version>2.2.2</openjpa.version>
+                <openjpa.includes>se/jguru/nazgul/**/*.class</openjpa.includes>
+                <openjpa.excludes>se/jguru/nazgul/core/xmlbinding/spi/jaxb/transport/EntityWrapper.class</openjpa.excludes>
+                <openjpa.persistenceXmlPath>weaving/openjpa/1/${project.artifactId}-persistence.xml</openjpa.persistenceXmlPath>
+                <openjpa.persistenceXmlFile>${project.basedir}/src/main/${openjpa.persistenceXmlPath}</openjpa.persistenceXmlFile>
+                <openjpa.persistenceXmlTestFile>${project.basedir}/src/test/${openjpa.persistenceXmlPath}</openjpa.persistenceXmlTestFile>
+                <jpa.provider.class>org.apache.openjpa.persistence.PersistenceProviderImpl</jpa.provider.class>
+                <surefire.argLine>-javaagent:${basedir}/target/openjpa.jar -Dfile.encoding=UTF-8 -Xmx1024m -XX:MaxPermSize=512m</surefire.argLine>
+            </properties>
+
+            <dependencies>
+                <dependency>
+                    <groupId>javax.persistence</groupId>
+                    <artifactId>persistence-api</artifactId>
+                    <version>1.0</version>
+                    <scope>provided</scope>
+                </dependency>
+            </dependencies>
+
+            <build>
+                <pluginManagement>
+                    <plugins>
+                        <!--
+                            OpenJPA static enhancement.
+                        -->
+                        <plugin>
+                            <groupId>org.apache.openjpa</groupId>
+                            <artifactId>openjpa-maven-plugin</artifactId>
+                            <version>${openjpa.version}</version>
+                            <configuration>
+                                <includes>${openjpa.includes}</includes>
+                                <excludes>${openjpa.excludes}</excludes>
+                                <addDefaultConstructor>true</addDefaultConstructor>
+                                <enforcePropertyRestrictions>true</enforcePropertyRestrictions>
+                            </configuration>
+                            <executions>
+                                <!-- execution>
+                                    <id>weave-openjpa-classes</id>
+                                    <phase>process-classes</phase>
+                                    <goals>
+                                        <goal>enhance</goal>
+                                    </goals>
+                                    <configuration>
+                                        <persistenceXmlFile>${openjpa.persistenceXmlFile}</persistenceXmlFile>
+                                    </configuration>
+                                </execution -->
+                                <execution>
+                                    <id>weave-openjpa-test-classes</id>
+                                    <phase>process-test-classes</phase>
+                                    <goals>
+                                        <goal>test-enhance</goal>
+                                    </goals>
+                                    <configuration>
+                                        <persistenceXmlFile>${openjpa.persistenceXmlTestFile}</persistenceXmlFile>
+                                    </configuration>
+                                </execution>
+                            </executions>
+                            <dependencies>
+                                <dependency>
+                                    <groupId>org.apache.openjpa</groupId>
+                                    <artifactId>openjpa</artifactId>
+                                    <version>${openjpa.version}</version>
+                                </dependency>
+                            </dependencies>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+
+                <plugins>
+                    <!--
+                        Use the dependency plugin to copy the OpenJPA runtime
+                        to the target directory.
+                    -->
+                    <plugin>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>copy</id>
+                                <phase>process-resources</phase>
+                                <goals>
+                                    <goal>copy</goal>
+                                </goals>
+                                <configuration>
+                                    <artifactItems>
+                                        <artifactItem>
+                                            <groupId>org.apache.openjpa</groupId>
+                                            <artifactId>openjpa</artifactId>
+                                            <version>${openjpa.version}</version>
+                                            <outputDirectory>${project.build.directory}</outputDirectory>
+                                            <destFileName>openjpa.jar</destFileName>
+                                        </artifactItem>
+                                    </artifactItems>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
         <profile>
             <id>openjpa2</id>
 
             <activation>
                 <property>
-                    <name>jpaSpec</name>
-                    <value>openjpa2</value>
+                    <name>!jpaSpec</name>
                 </property>
             </activation>
+
+            <properties>
+                <openjpa.version>2.2.2</openjpa.version>
+                <openjpa.includes>se/jguru/nazgul/**/*.class</openjpa.includes>
+                <openjpa.excludes>se/jguru/nazgul/core/xmlbinding/spi/jaxb/transport/EntityWrapper.class</openjpa.excludes>
+                <openjpa.persistenceXmlPath>weaving/openjpa/2/${project.artifactId}-persistence.xml</openjpa.persistenceXmlPath>
+                <openjpa.persistenceXmlFile>${project.basedir}/src/main/${openjpa.persistenceXmlPath}</openjpa.persistenceXmlFile>
+                <openjpa.persistenceXmlTestFile>${project.basedir}/src/test/${openjpa.persistenceXmlPath}</openjpa.persistenceXmlTestFile>
+                <jpa.provider.class>org.apache.openjpa.persistence.PersistenceProviderImpl</jpa.provider.class>
+                <surefire.argLine>-javaagent:${basedir}/target/openjpa.jar -Dfile.encoding=UTF-8 -Xmx1024m -XX:MaxPermSize=512m</surefire.argLine>
+            </properties>
+
             <dependencies>
                 <!--
                     These dependencies are required to run the OpenJPA for JSE environments,
@@ -183,12 +351,81 @@
                     <version>${openjpa.version}</version>
                     <scope>compile</scope>
                 </dependency>
+                <dependency>
+                    <groupId>org.apache.openjpa</groupId>
+                    <artifactId>openjpa</artifactId>
+                    <version>${openjpa.version}</version>
+                    <scope>provided</scope>
+                </dependency>
             </dependencies>
+
             <build>
+                <pluginManagement>
+                    <plugins>
+                        <!--
+                            OpenJPA static enhancement.
+                        -->
+                        <plugin>
+                            <groupId>org.apache.openjpa</groupId>
+                            <artifactId>openjpa-maven-plugin</artifactId>
+                            <version>${openjpa.version}</version>
+                            <configuration>
+                                <includes>${openjpa.includes}</includes>
+                                <excludes>${openjpa.excludes}</excludes>
+                                <addDefaultConstructor>true</addDefaultConstructor>
+                                <enforcePropertyRestrictions>true</enforcePropertyRestrictions>
+                            </configuration>
+                            <executions>
+                                <execution>
+                                    <id>weave-openjpa-test-classes</id>
+                                    <phase>process-test-classes</phase>
+                                    <goals>
+                                        <goal>test-enhance</goal>
+                                    </goals>
+                                    <configuration>
+                                        <persistenceXmlFile>${openjpa.persistenceXmlTestFile}</persistenceXmlFile>
+                                    </configuration>
+                                </execution>
+                            </executions>
+                            <dependencies>
+                                <dependency>
+                                    <groupId>org.apache.openjpa</groupId>
+                                    <artifactId>openjpa</artifactId>
+                                    <version>${openjpa.version}</version>
+                                </dependency>
+                            </dependencies>
+
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+
                 <plugins>
+                    <!--
+                        Use the dependency plugin to copy the OpenJPA runtime
+                        to the target directory.
+                    -->
                     <plugin>
-                        <groupId>org.apache.openjpa</groupId>
-                        <artifactId>openjpa-maven-plugin</artifactId>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>copy</id>
+                                <phase>process-resources</phase>
+                                <goals>
+                                    <goal>copy</goal>
+                                </goals>
+                                <configuration>
+                                    <artifactItems>
+                                        <artifactItem>
+                                            <groupId>org.apache.openjpa</groupId>
+                                            <artifactId>openjpa</artifactId>
+                                            <version>${openjpa.version}</version>
+                                            <outputDirectory>${project.build.directory}</outputDirectory>
+                                            <destFileName>openjpa.jar</destFileName>
+                                        </artifactItem>
+                                    </artifactItems>
+                                </configuration>
+                            </execution>
+                        </executions>
                     </plugin>
                 </plugins>
             </build>
